# ChangeLog for sys-apps/calculate
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-9999.ebuild:
  Fix git path.

  16 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-1.3.7.ebuild, -calculate-1.3.8.ebuild, -calculate-1.3.9.ebuild,
  -calculate-1.3.11.ebuild, +calculate-1.3.12.ebuild:
  Bump version.Removed previous.

*calculate-1.3.12 (16 Apr 2010)

  16 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-1.3.7.ebuild, -calculate-1.3.8.ebuild, -calculate-1.3.9.ebuild,
  -calculate-1.3.11.ebuild, +calculate-1.3.12.ebuild:
  Bump version. Removed previous.

*calculate-1.3.11 (07 Apr 2010)

  07 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-1.3.10.ebuild, +calculate-1.3.11.ebuild:
  Bump version. Remove previous.

*calculate-1.3.10 (05 Apr 2010)

  05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-1.3.10.ebuild:
  Bump version.

*calculate-1.3.2 (03 Dec 2009)

  03 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  -calculate-1.3.1.ebuild, +calculate-1.3.2.ebuild:
  Version bump.

  02 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  -calculate-1.3.0.ebuild:
  Remove old.

*calculate-1.3.1 (02 Dec 2009)

  02 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  -calculate-1.2.12-r2.ebuild, +calculate-1.3.1.ebuild:
  Version bump. Remove old.

*calculate-1.3.0 (01 Dec 2009)

  01 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +calculate-1.3.0.ebuild, +metadata.xml:
  Ebuild for new version of calculate.
