@@ -1,5 +1,5 @@
 DIST calculate-1.3.12.tar.bz2 170338 RMD160 d2b4ebee602ac05d9752bd52335c3318db440638 SHA1 1d361bcb53efc73684dffcca972987354ae237f8 SHA256 34d073fcb977bfdc8e8e38354a5171a9db9dcb65ec00ade10bba7ae302968d8f
-EBUILD calculate-1.3.12.ebuild 2009 RMD160 be91001747401c026317be8786237a864557a14f SHA1 c7fef5e22bbe9cf30a8c47523f16f491533a4fe5 SHA256 7d30a92a40b08fab81aac3f357aa04df8d967151deda8020a2872683d25b67ca
-EBUILD calculate-9999.ebuild 1471 RMD160 5abbc0ee6b12ae4dee6d255da8e17e8ea8a2b6a3 SHA1 f545efc1d2216ff0aa2675f515327580c3d077be SHA256 57e306055e800898db22c4776d14b0a6db5b5ad362d4915af3c4959378e3bd9c
-MISC ChangeLog 1634 RMD160 2f39c1e3c992ee31bda58e65877c1476dda03cc4 SHA1 91e9527b5b34adc831fe46090c1ab7321904527b SHA256 b4fcea2db68653a3e1903d74c38ca3db09df5bad9e042d9cc3a11e6ea240a713
+EBUILD calculate-1.3.12.ebuild 1693 RMD160 0e280169cb879bbaf47d4037d5378dd51060ee66 SHA1 85cdd338c0eb005b9bf93e7b56f807b97451bd29 SHA256 6f18afe1adaffbb1622ed8e35e568b193be24ce1b275ce2c81146eba3611ae2f
+EBUILD calculate-9999.ebuild 1587 RMD160 32810ea29e816cf5493bd3b5ffebc99664de1bdf SHA1 b23942a47025c1434884fa7c191074ff583beafb SHA256 7ba0059b53a6eb50c12d62ee09c5974e9793b8e989d2127b9804f1776ca07b1b
+MISC ChangeLog 1888 RMD160 5ddf7e39ac0b9a98aab75ab79f201d612435ff98 SHA1 39d9bdbc1b858c735362e35ec6aa9f1ad3c081c6 SHA256 80e00d7ef448a549e979652e203396d5b56308af65e070063863e9ea3113e574
 MISC metadata.xml 301 RMD160 2b89953e755d47fdc10f6def8e9d30975ed5aba1 SHA1 fa349945c077ca3d0fd95693f04a60f2da15f467 SHA256 074eff7c846f7fc8f0e74e0d992bdda9432164f28c0f3cf8991a1e59aac38700
