@@ -2,6 +2,14 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  calculate-1.3.12.ebuild, calculate-9999.ebuild:
+  Change depends.
+
+  10 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  calculate-9999.ebuild:
+  Add depend to live calculate ebuild.
+
   04 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   calculate-9999.ebuild:
   Fix git path.
